--- a/lab6/Lab6-Graphing.ipynb
+++ b/lab6/Lab6-Graphing.ipynb
@@ -50,7 +50,7 @@
     "# read in stata data set using pandas ( pd) \n",
     "#pd.read_stata('stata.dta')\n",
     "#pd.read_stata('bwm_child_EVDvars.dta')\n",
-    "WGP3rds_df = pd.DataFrame(pd.read_stata('WGP_3waves_Data8.dta'))\n",
+    "WGP3rds_df = pd.DataFrame(pd.read_stata('WGP_3rounds_Data8.dta'))\n",
     "WGP3rds_table= Table.from_df(WGP3rds_df)\n",
     "#WGP_df.head(10)"
    ]
